src/scss/klaro.scss
$box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.2), 5px 5px 10px 0 rgba(0, 0, 0, 0.19);
$border-radius: 4px;

$blue: #057EB6;
$green: #008A28;

$theme-bg: #333;
$theme-border: 1px solid #555;
$theme-color: #eee;
$theme-color-light: #aaa;

// micro css reset for everything klaro related
[class^="klaro-"] {
    margin: 0;
    padding: 0;
    border: 0;
    font-family: inherit;
    font-size: inherit;
    color: inherit;
    vertical-align: baseline;
    cursor: default;
}

.klaro-Main,
.klaro-Modal {
    font-size: 1em;
    line-height: 1.5;
}

.klaro-Button {
    border: 0;
    color: #fff;
    border-radius: $border-radius;
    padding: 6px 10px;
    margin-right: 0.5em;
    border: 1px solid transparent;

    &[disabled] {
        opacity: 0.75;
    }
}

.klaro-Button--save,
.klaro-Button--accept {
    background: $green;
    color: #fff;
}

.klaro-Button--decline {
    background: #666;
}

.klaro-Button--info {
    background: $blue;
}

.klaro-Notice {
    background: $theme-bg;
    position: fixed;
    z-index: 1000;
    width: 100%;
    bottom: 0;
    font-size: 0.8em;

    @media (min-width: 990px) {
        box-shadow: $box-shadow;
        border-radius: $border-radius;
        bottom: 20px;
        right: 20px;
        max-width: 300px;
    }

    @media (max-width: 989px) {
        border: none;
        border-radius: 0;
    }
}

.klaro-Notice--hidden {
    display: none !important;
}

.klaro-Notice-body {
    padding: 1em;
}

.klaro-Notice-description {
    color: $theme-color;
    margin-bottom: 0.5em;
}

.klaro-Notice-purposes {
    color: $theme-color;
}

.klaro-Notice-changes {
    color: $theme-color;
    margin-bottom: 0.5em;
    font-weight: bold;
}

.klaro-Notice-actions {
    display: block;
}

.klaro-Notice-actionItem {
    display: inline;
}

.klaro-Notice-learnMoreButton {
    display: inline-block;
}

.klaro-ModalOverlay {
    z-index: 1000;
    background: rgba(0,0,0,0.5);
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}

.klaro-Modal {
    z-index: 1001;
    box-shadow: $box-shadow;

    @media (min-width: 1024px){
        border-radius: $border-radius;
        position: relative;
        margin: 0 auto;
        max-width: 640px;
        height: auto;
        width: auto;
    }

    width: 100%;
    max-height: 98%;

    top: 50%;
    transform: translateY(-50%);

    position: fixed;
    overflow: auto;
    background: $theme-bg;
    color: $theme-color;
}

.klaro-Modal-header {
    padding: 1em;
    border-bottom: $theme-border;
}

.klaro-Modal-title {
    margin: 0;
    font-size: 2em;
    display: block;
    font-weight: bold;
    padding-right: 20px;
}

.klaro-Modal-closeButton {
    border: none;
    background: none;
    color: inherit;
    position: absolute;
    top: 1em;
    right: 1em;

    svg {
        stroke: currentColor;
    }
}

.klaro-Modal-body {
    padding: 1em;
}

.klaro-Modal-footer {
    padding: 1em;
    border-top: $theme-border;
}

.klaro-Modal-privacyPolicyLink,
.klaro-Modal-poweredByLink {
    cursor: pointer;
    text-decoration: underline;
    color: inherit;

    &:hover,
    &:focus,
    &:active {
        color: inherit;
    }

    &:hover,
    &:focus {
        text-decoration: none;
    }
}

.klaro-Modal-poweredByLink {
    position: absolute;
    right: 1em;
    color: $theme-color-light;
    font-size: 0.8em;
    padding: 6px 0;

    &:hover,
    &:focus,
    &:active {
        color: $theme-color-light;
    }
}

.klaro-AppList {
    display: block;
    padding: 0;
    margin: 0;
}

.klaro-AppList-item {
    display: block;
    position: relative;
    line-height: 1.25;
    vertical-align: middle;
    padding-left: 60px;
    min-height: 40px;
    margin-top: 0.7em;

    &:first-child {
        margin-top: 0;
    }
}

.klaro-AppItem-title {
    font-weight: 600;
    cursor: pointer;
}

.klaro-AppItem-description {
    font-size: 0.8em;
}

.klaro-AppItem-purposes {
    font-size: 0.8em;
    color: $theme-color-light;
}

.klaro-AppItem-optOut,
.klaro-AppItem-required {
    padding-left: 0.2em;
    font-size: 0.8em;
    color: $theme-color-light;
}

.klaro-AppItem-input {
    position: absolute;
    top: 0;
    left: 0;
    opacity: 0;
    width: 50px;
    height: 30px;
}

.klaro-AppItem-switch {
    position: absolute;
    left: 0;
    display: inline-block;
    width: 50px;
    height: 30px;
}

.klaro-AppItem-slider {
    box-shadow: $box-shadow;
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #aaa;
    -webkit-transition: .4s;
    transition: .4s;
    width: 50px;
    display: inline-block;
    border-radius: 30px;
    border: 2px solid transparent;

    &:before {
        position: absolute;
        content: "";
        height: 20px;
        width: 20px;
        left: 3px;
        bottom: 3px;
        background-color: white;
        -webkit-transition: .4s;
        transition: .4s;
        border-radius: 50%;
        border: 1px solid #555;
    }
}

.klaro-AppItem-switchLabel {
    position: absolute;
    width: 50px;
    top: 34px;
    overflow: ellipsis;
    font-size: 0.8em;
    text-align: center;
}

.klaro-AppItem-switch--disabled .klaro-AppItem-slider {
    cursor: default;
    opacity: 0.5;
}

.klaro-AppItem-switch--disabled .klaro-AppItem-switchLabel {
    color: #aaa;
}

.klaro-AppItem-input:focus + .klaro-AppItem-label .klaro-AppItem-slider {
    border-color: #fff;
    outline-offset: 2px;
}

.klaro-AppItem-input:checked + .klaro-AppItem-label .klaro-AppItem-slider {
    background-color: $blue;
}

.klaro-AppItem-input:checked + .klaro-AppItem-label .klaro-AppItem-slider:before {
    -webkit-transform: translateX(20px);
    -ms-transform: translateX(20px);
    transform: translateX(20px);
}

.klaro-AppToggles {
    margin-bottom: 1em;
    display: block;
}

.klaro-AppToggles-item {
    display: inline;
}

